# LightFields

./: CMakeLists.txt  README.md
src/: Barrier.h  DrawGrid.cpp  imguiVars.cpp  main.cpp  mainnew.cpp
src/convert/: CMakeLists.txt  main.cpp
src/render/: Barrier.cpp  CMakeLists.txt  DrawGrid.cpp  gpuDecoder.cpp  gpuDecoder.h  main.cpp
src/render/shader/: geom.frag  lf.frag  lfb.frag
src/shader/: fragment.frag  geom.frag  geom.vert  lf.frag  lf.vert  vertex.vert
